# Working

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
Bioinf/: 100d-assembly1.cif  7pll_nmr-data.nef
Bioinf/FirstONE/: BigONE.ipynb  exapmleGUI.py
Bioinf/FirstONE/prodready/: aminoacids_table_wiki.txt
Bioinf/FirstONE/prodready/DNA_processing/: DNA_processing.py  Example.py  Example_protein  Protein_processing.py  RNAProteinConverter.py  RNA_processing.py  docs.mdj  fileOperations.py  stringOperations.py
Bioinf/FirstONE/prodready/FASTA_processing/: DNA_processing.py  Protein_processing.py  RNAProteinConverter.py  fileOperations.py  stringOperations.py
Bioinf/FirstONE/prodready/FASTA_processing/Examples/: Example_dna.py  Example_rnaproteinconverter.py
Examples/: Example_protein.py
Examples/Results/: results_dna.txt  results_rna.txt
FASTA_processing/: .gitignore  README.md  streamlit_app.py
FASTA_processing/Examples/: Example.py  Example_dna.py  Example_protein.py  Example_rnaproteinconverter.py
FASTA_processing/Examples/Results/: results_protein.txt
FASTA_processing/docs/: README.md
FASTA_processing/fasta_processing/: __init__.py  dna_processing.py  file_processing.py  protein_processing.py  rna2protein_converter.py
FASTA_processing/sampledata/: example-protein.fasta  example-rna.fasta
app/: streamlit_app.py
sampledata/: example-dna.fasta  example-rna.fasta
src/fasta_processing/: __init__.py  dna.py  io_utils.py  protein.py  translators.py
tests/: README.md
(+2 files in other folders)
