[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fasta-processing"
version = "0.1.0"
description = "FASTA tools (DNA/RNA/protein) with Streamlit UI"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
